<resources>
    <string name="app_name">Blood On Request</string>
    <string name="splash_donate">Donate Blood, Save Life</string>
    <string name="app_version">V 1.0.0</string>
    <string name="number_verify">Verify Your Number</string>
    <string name="opt">PHONE NUMBER VERIFICATION</string>
    <string name="opt_text">OTP has been sent to you on your mobile phone. Please check your mobile and enter the code here.</string>
    <string name="opt_resend">RESEND OTP</string>
    <string name="opt_verify">VERIFY</string>
    <string name="opt_text_resend">Did not get the code ??</string>
    <string name="phone_image">phone_image</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code</string>
    <string name="_977">+977</string>
    <string name="_1234567890">1234567890</string>
    <string name="verify">VERIFY</string>
    <string name="enter_the_otp_you_have_recieved">Enter the OTP you have recieved on number</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="verify_number">Verify Number</string>
    <string name="didn_t_receive_otp">Did not Receive OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="auth_top_background">Auth Top Background</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="o">O+</string>
    <string name="oN">O-</string>
    <string name="a">A+</string>
    <string name="an">A-</string>
    <string name="b">B+</string>
    <string name="bn">B-</string>
    <string name="ab">AB+</string>
    <string name="abn">AB-</string>
    <string name="contact_number">Contact Number</string>
    <string name="address_city">Address (city)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mark_me_as_a_donor">Mark me as a Donor</string>
    <string name="error">Error</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Request Blood</string>
    <string name="menu_slideshow">Donate Blood</string>
    <string name="reply_label">Donor will be available soon!</string>
    <string name="logout">Logout</string>
    <string name="request_blood">Request Blood</string>
    <string name="copyright_2021_sirish_jung_khadka">Copyright 2021| Sirish Jung Khadka</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="blood_on_request">Blood on Request</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="blood_banks">Profile</string>
    <string name="hospitals">Logout</string>
    <string name="blood_group_o_o_b_b_a_a_ab_ab">Blood Group (O+/O-/B+/B-/A+/A-/AB+/AB-)</string>
    <string name="amount_of_blood">Amount of Blood</string>
    <string name="location_details">Location Details</string>
    <string name="needed_till_date">Needed till Date</string>
    <string name="why_do_you_need_blood">Why do you need blood?</string>
    <string name="request">REQUEST</string>
    <string name="every_blood_donar">Every blood donor is a life saver. Your little blood can save an innocent life</string>
    <string name="search_blood_group">Search Blood Group</string>
    <string name="date_request">Date Request</string>
    <string name="blood_amount">Blood Amount</string>
    <string name="location">Location</string>
    <string name="reason_for_requests">Reason for requests</string>
    <string name="profile">Profile</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="gender_male_female_others">Gender (Male/Female/Others)</string>
    <string name="blood_group_o_o">Blood Group (O+/O-/...)</string>
    <string name="country_name">Country Name</string>
    <string name="logout_string">Blood On Demand is a FREE blood donation app available for Android smart phones. Simply Blood searches based upon blood groups, notifies and connects thousands of blood donors in very simple steps. It is very hassle free blood donation and privacy of a blood donor.</string>
    <string name="remove_account">Remove Account</string>
    <string name="hospital">Hospitals</string>
    <string name="nav_blood_banks">Blood Banks</string>
    <string name="title_activity_maps">Map</string>
    <string name="API_KEY">AIzaSyCJCYvKTCgal8-yiKXRcGMCIy2k_prO5To</string>
    <string name="search_by_hospital_name">Search by hospital name</string>
    <string name="search_by_blood_bank_name">Search by blood bank name</string>
    <string name="nav_my_hosptial">Hospitals</string>
    <string name="blood_donations">Blood Donations</string>
</resources>